# CI-CDPython

./: .gitignore  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/logic_ops/: __init__.py
tests/: test_add.py
