[metadata]
name = logic_ops
description = My Test Project
author = Sarath
license = MIT
platforms = any
version = 0.1
classifiers =
    # Development Status :: 3 - Alpha
    # Environment :: Console
    # Intended Audience :: Developers
    # License :: OSI Approved :: MIT License
    # Operating System :: OS Independent
    # Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    # Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = 
    logic_ops
install_requires=
    requests>=2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = False


[options.extras_require]
testing=
    pytest==7.1.3
    pytest-cov==4.0.0
    mypy==0.982
    flake8==5.0.4
    tox==3.26.0

[options.package_data]
logic_ops = py.typed

[flake8]
max-line-length = 160

# [options.packages.find]
# where = src

